--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "food_web",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "beautiful": "prettier --single-quote --trailing-comma all --write src/**/*.{js,css,json}",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect ./index.js "
+    "start": "nodemon --inspect src/index.js ",
+    "watch": "node-sass --watch src/resources/scss/ --output src/public/css/"
   },
   "repository": {
     "type": "git",
@@ -21,9 +23,20 @@
   },
   "homepage": "https://github.com/LucHa2000/Food_Web#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
+    "express-recaptcha": "^5.0.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.13.6",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "nodemailer": "^6.6.3",
+    "prettier": "^2.3.2"
   },
   "devDependencies": {
+    "node-sass": "^6.0.1",
     "nodemon": "^2.0.12"
   }
 }
