--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "express-handlebars": "^5.3.2",
     "express-recaptcha": "^5.0.2",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.13.6",
+    "mongoose-delete": "^0.5.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "node-schedule": "^2.0.0",
     "nodemailer": "^6.6.3",
     "prettier": "^2.3.2"
   },
