--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "homepage": "https://github.com/LucHa2000/Food_Web#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-recaptcha": "^5.0.2",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.13.6",
