--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "moment": "^2.29.1",
     "mongoose": "^5.13.6",
     "mongoose-delete": "^0.5.4",
-    "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "mysql2": "^2.3.3",
     "node-schedule": "^2.0.0",
     "nodemailer": "^6.6.3",
     "prettier": "^2.3.2"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12"
   }
